fixed alignment 2

--- a/styles.css
+++ b/styles.css
@@ -114,17 +114,17 @@ h3 {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  width: 50%;
-  padding-left: 25%;
+  width: auto;
+  /* padding-left: 25%; */
   margin-top: 35px;
 }
 
 .first-half-sec {
   width: 50%;
-  padding: 10px;
+  /* padding: 10px; */
   display: flex;
   gap: 10px;
-  height: 100vh;
+  height: auto;
 
   flex-direction: column;
   /* justify-content: center; */
@@ -274,7 +274,7 @@ input:not(:focus) {
 
 
 /* For tablet devices */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 900px) {
   .first-half-sec {
     width: 100%;
     padding: 0;
@@ -334,7 +334,7 @@ input:not(:focus) {
 
   .first-half-sec {
   
-    margin-top: 150px;
+    margin-top: 70px;
 
   }
 
@@ -349,7 +349,7 @@ input:not(:focus) {
   }
 
   .second-half-sec {
-    margin-top:100px ;
+    margin-top:70px ;
   }
 
   .email-box {
